# miso-sampler-docker

./: .ghci  .gitignore  Docker.md  Dockerfile  Dockerfile-builder  Main.hs  README.md  app.cabal  app.nix  cabal.project  default.nix  docker.nix  flake.nix
.github/workflows/: main.yml
app/: Main.hs
static/: index.html
