cabal-version:      3.0
name:               app
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             dmjio
maintainer:         code@dmj.io
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable app
  import:           warnings
  main-is:          Main.hs
  build-depends:    base < 5, miso
  hs-source-dirs:   app
  default-language: Haskell2010
